Added a bunch of descriptions to work page

--- a/work.html
+++ b/work.html
@@ -34,91 +34,85 @@
       <div id="tab1" class="col s12">
         <div class="section">
           <h1 class="header light-blue-text darken-1">TEN7 Interactive</h1>
-            <div class="row">
-              <h2 class="header light-blue-text darken-1">Roles</h2>
-              <div class="col s12">
-                <div class="card z-depth-3 green lighten-1">
-                  <div class="card-content">
-                    <h1>Developer</h1>
-                  </div>
-                  <div class="card-footer">
-                    <p>December 2013 - Present</p>
-                    <p><strong>Description: </strong>I've worked on a wide variety of projects at TEN7. From small support roles on existing sites, to starting a site from scratch as the lead developer. I've been fortunate enough to experience working in teams, as well as individually, while using new technologies every day.</p>
-                    <p><strong>Skills: </strong>Drupal, git, drush, HTML5, CSS (including LESS & SCSS), JavaScript (jQuery), Multiple Web Frameworks, PhotoShop</p>
-                    <a class="card-action" href="http://then7.com">Link to TEN7</a>
-                  </div>
+          <div class="row">
+            <h2 class="header light-blue-text darken-1">Roles</h2>
+            <div class="col s12">
+              <div class="card z-depth-3 green lighten-1">
+                <div class="card-content">
+                  <h1>Developer</h1>
+                </div>
+                <div class="card-footer">
+                  <p>December 2013 - Present</p>
+                  <p><strong>Description: </strong>I've worked on a wide variety of projects at TEN7. From small support roles on existing sites, to starting a site from scratch as the lead developer. I've been fortunate enough to experience working in teams, as well as individually, while using new technologies every day.</p>
+                  <p><strong>Skills: </strong>Drupal 6/7, git, drush, HTML5, CSS (including LESS & SCSS), JavaScript (jQuery), command line tools (node, bower, compass), Multiple Web Frameworks, PhotoShop</p>
+                  <a class="card-action" href="http://then7.com">Link to TEN7</a>
                 </div>
               </div>
+            </div>
             
-            </div>
-
-            <div class="row">
-              <div class="col s12 l6">
-                <div class="card z-depth-3 cyan">
-                  <div class="card-content">
-                    <h1>Quality Assurance Analyst</h1>
-                    <p>QA</p>
-                  </div>
-                  <div class="card-footer">
-                    <p>September 2013 - Present</p>
-                    <p>Maintained and updated production and development servers, as well as Git repositories</p>
-                    <p>Sample content</p>
-                    <a class="card-action" href="http://then7.com">TEN7</a>
-                  </div>
+          </div>
+          <div class="row">
+            <div class="col s12 l6">
+              <div class="card z-depth-3 green darken-1">
+                <div class="card-content">
+                  <h1>DevOps Engineer</h1>
                 </div>
-              </div>
-              <div class="col s12 l6">
-                <div class="card z-depth-3 indigo">
-                  <div class="card-content">
-                    <h1>DevOps</h1>
-                  </div>
-                  <div class="card-footer">
-                    <p>September 2013 - Present</p>
-                    <p>Maintained and updated production and development servers, as well as Git repositories</p>
-                    <p>Sample content</p>
-                  </div>
+                <div class="card-footer">
+                  <p>September 2013 - Present</p>
+                  <p><strong>Description: </strong>As a DevOps Engineer, my responsibilities focused mainly on stie updates and maintenance. This would occur across multiple environments, on production and development servers. I have also maintained and migrated git repositories for every site we have developed or currently support.</p>
+                  <p><strong>Skills: </strong>git (including branches), bash scripting, command line tools (drush, mysql), site deployment on live servers, Drupal core and contributed module updates, Google Analytics, MAMP, Sequel Pro</p>
                 </div>
               </div>
             </div>
-            <div class="row">
-              <div class="col s12">
-                <h2 class="header light-blue-text darken-1">Projects</h2>
-                <div class="card z-depth-3 orange">
-                  <div class="card-content">
-                    <h1>Card Title</h1>
-                    <p>This is sample content</p>
-                  </div>
-                  <div class="card-footer">
-                    <p>Footer</p>
-                    <p>Sample content</p>
-                    <p>Sample content</p>
-                    <a class="card-action" href="#">This is a link</a>
-                    <a class="card-action" href="#">This is a link</a>
-                  </div>
+            <div class="col s12 l6">
+              <div class="card z-depth-3 green darken-2">
+                <div class="card-content">
+                  <h1>Quality Assurance Analyst</h1>
+                </div>
+                <div class="card-footer">
+                  <p>September 2013 - Present</p>
+                  <p><strong>Description: </strong>Site development requires thourough testing, throughout all stages of a project. I've used many different technologies to help streamline and automate the QA process.</p>
+                  <p><strong>Skills: </strong>Browserstack testing automation, Litmus testing automation, VirtualBox, comparision across multiple devices</p>
                 </div>
               </div>
             </div>
-
+          </div>
+          <div class="row">
+            <div class="col s12">
+              <h2 class="header light-blue-text darken-1">Projects</h2>
+              <div class="card z-depth-3 green darken-3">
+                <div class="card-content">
+                  <h1>InnerCity Tennis</h1>
+                </div>
+                <div class="card-footer">
+                  <p>June 2014 - December 2014</p>
+                  <p>This project was a complete site redesign from square one, on which I was the sole developer. Being able to own every development step along the way was an incredible learning experience, and has vastly improved my own skills.</p>
+                  <p><strong>Skills: </strong>Completing and participating in a long-term project from start to finish, communicating with clients in regard to new requests and site functionality, maintaining a level-head throughout many frustrating stages of the process.</p>
+                  <a class="card-action" href="http://innercitytennis.org">InnerCityTennis.org</a>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
       <!-- Pearson -->
       <div id="tab2" class="col s12">
         <div class="section">
           <div class="row">
+            <h1 class="header light-blue-text darken-1">Pearson VUE</h1>
             <div class="row">
               <div class="col s12">
                 <h2 class="header light-blue-text darken-1">Roles</h2>
-                <div class="card z-depth-3 orange lighten-1">
+                <div class="card z-depth-3 deep-purple">
                   <!-- TEN7 section -->
                   <div class="card-content">
-                    <h1>Pearson Vue</h1>
-                    <p>Developer/DevOps/QA</p>
+                    <h1>Software Quality Assurance Intern</h1>
                   </div>
                   <div class="card-footer">
-                    <p>September 2013 - Present</p>
-                    <p>Maintained and updated production and development servers, as well as Git repositories</p>
-                    <p>Sample content</p>
-                    <a class="card-action" href="http://then7.com">TEN7</a>
+                    <p>June 2013 - September 2013</p>
+                    <p><strong>Description: </strong>The computer-based testing software produced by Pearson VUE is vastly in-depth, and thus requires in-depth testing. I helped to write and perfom numerous automated test scenarios that were performed on the functionality of Pearson VUE software on a daily basis.</p>
+                    <p><strong>Skills: </strong>Twist automation software, Perforce version control, introduction to a very large code base, writing custom SQL queries, various database visualization software, realizing I hate working in a cubicle</p>
+                    <a class="card-action" href="http://pearsonvue.com">Pearson VUE</a>
                   </div>
                 </div>
               </div>
@@ -126,17 +120,14 @@
             <div class="row">
               <div class="col s12">
                 <h2 class="header light-blue-text darken-1">Projects</h2>
-                <div class="card z-depth-3 orange">
+                <div class="card z-depth-3 deep-purple darken-1">
                   <div class="card-content">
-                    <h1>Card Title</h1>
-                    <p>This is sample content</p>
+                    <h1>Visual Report of Automated Tests - Updated In Real Time</h1>
                   </div>
                   <div class="card-footer">
-                    <p>Footer</p>
+                    <p>August 2013 - September 2013</p>
+                    <p><strong>Description: </strong>Myself, along with three other summer interns, created a visual display of the nightly test results. We used SQL queries, along with reporting software to see graphs and visually appealing data to show results from hundreds of tests.</p>
                     <p>Sample content</p>
-                    <p>Sample content</p>
-                    <a class="card-action" href="#">This is a link</a>
-                    <a class="card-action" href="#">This is a link</a>
                   </div>
                 </div>
               </div>
