--- a/work.html
+++ b/work.html
@@ -127,7 +127,7 @@
                   <div class="card-footer">
                     <p>August 2013 - September 2013</p>
                     <p><strong>Description: </strong>Myself, along with three other summer interns, created a visual display of the nightly test results. We used SQL queries, along with reporting software to see graphs and visually appealing data to show results from hundreds of tests.</p>
-                    <p>Sample content</p>
+                    <p><strong>Skills: </strong>iReports database reporting tools, SQL queries, some Java</p>
                   </div>
                 </div>
               </div>
