--- a/index.html
+++ b/index.html
@@ -3,28 +3,25 @@
     <!--Import materialize.css-->
     <link type="text/css" rel="stylesheet" href="stylesheets/materialize.css" media="screen,projection"/>
     <link type="text/css" rel="stylesheet" href="stylesheets/custom.css" media="screen,projection"/>
+    <link type="text/css" rel="stylesheet" href="stylesheets/animate.css" media="screen,projection"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
+    <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+        <script>
+    $(function(){
+    $("#header").load("header.html");
+    $("#footer").load("footer.html");
+
+    });
+    </script>
+    <script src="js/wow.min.js"></script>
   </head>
-  <nav class="light-blue darken-1 z-depth-1">
-    <div class="container">
-      <div class="nav-wrapper">
-        <a href="index.html" class="brand-logo white-text"><img class="brand" src="img/c.png"></a>
-        <ul id="nav-mobile" class="right side-nav">
-          <li><a href="work.html" class="smoove">Work</a></li>
-          <li><a href="about.html">About Me</a></li>
-          <li><a href="index.html#contact">Contact</a></li>
-        </ul>
-        <a class="button-collapse" href="#" data-activates="nav-mobile"><i class="mdi-navigation-menu"></i></a>
-      </div>
-    </div>
-  </nav>
-  
-  <body>
+  <div id="header"></div>
+<body>
     <div class="section">
       <div class="container">
         <div class="row">
           <h1 class="header light-blue-text darken-1">
-          A Portfolio Site
+          Coleman Rollins
           </h1>
         </div>
         <div class="row center">
@@ -55,24 +52,8 @@
       </div>
     </div>
     <!-- footer -->
-    <div class="section light-blue darken-1">
-      <a name="contact"></a>
-      <div class="container">
-        <div class="row center">
-          <div class="col s12 l6">
-            <a href="#" class="waves-effect waves-dark btn orange darken-1"><span>Email</span><i class="mdi-communication-email"></i></a>
-          </div>
-          <div class="col s12 l6">
-            <a href="#" class="waves-effect waves-dark btn orange darken-1"><span>Connect</span><i class="mdi-social-people-outline"></i></a>
-          </div>
-        </div>
-        <div class="row center">
-          <p class="flow-text no-marg"><h6 class="white-text">Created in 2014 by Coleman Rollins</h6></p>
-        </div>
-      </div>
-    </div>
+        <div id="footer"></div>
     <!--Import jQuery before materialize.js-->
-    <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="js/materialize.min.js"></script>
     <script type="text/javascript" src="js/js.js"></script>
   </body>
