--- a/work.html
+++ b/work.html
@@ -3,32 +3,32 @@
     <!--Import materialize.css-->
     <link type="text/css" rel="stylesheet" href="stylesheets/materialize.css" media="screen,projection"/>
     <link type="text/css" rel="stylesheet" href="stylesheets/custom.css" media="screen,projection"/>
+    <link type="text/css" rel="stylesheet" href="stylesheets/animate.css" media="screen,projection"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
+    <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script>
+    $(function(){
+    $("#header").load("header.html");
+    $("#footer").load("footer.html");
+    });
+    </script>
+    <script src="js/wow.min.js"></script>
+    <script>
+      new WOW().init();
+    </script>
   </head>
-  <nav class="light-blue darken-1 z-depth-1">
-    <div class="container">
-      <div class="nav-wrapper">
-        <a href="index.html" class="brand-logo white-text"><img class="brand" src="img/c.png"></a>
-        <ul id="nav-mobile" class="right side-nav">
-          <li><a href="work.html" class="smoove">Work</a></li>
-          <li><a href="about.html">About Me</a></li>
-          <li><a href="index.html#contact">Contact</a></li>
+  <body>
+    <div id="header"></div>
+    <div class="row center fixed" id="tabz">
+      <div class="col s12 fixed no-pad">
+        <ul class="tabs z-depth-1">
+          <li class="tab"><a href="#tab1">TEN7</a></li>
+          <li class="tab"><a href="#tab2">Pearson</a></li>
+          <li class="tab"><a href="#tab3">U Of M</a></li>
+          <li class="tab"><a href="#tab4">Education</a></li>
         </ul>
-        <a class="button-collapse" href="#" data-activates="nav-mobile"><i class="mdi-navigation-menu"></i></a>
       </div>
     </div>
-  </nav>
-  <div class="row center fixed" id="tabz">
-    <div class="col s12 fixed no-pad">
-      <ul class="tabs z-depth-1">
-        <li class="tab"><a href="#tab1">TEN7</a></li>
-        <li class="tab"><a href="#tab2">Pearson</a></li>
-        <li class="tab"><a href="#tab3">U Of M</a></li>
-        <li class="tab"><a href="#tab4">Education</a></li>
-      </ul>
-    </div>
-  </div>
-  <body>
     <!-- TEN7 -->
     <div class="container">
       <div id="tab1" class="col s12">
@@ -37,6 +37,7 @@
           <div class="row">
             <h2 class="header light-blue-text darken-1">Roles</h2>
             <div class="col s12">
+              
               <div class="card z-depth-3 green lighten-1">
                 <div class="card-content">
                   <h1>Developer</h1>
@@ -139,20 +140,20 @@
       <div id="tab3" class="col s12">
         <div class="section">
           <div class="row">
+            <h1 class="header light-blue-text darken-1">University of MN - IT Department</h1>
             <div class="row">
               <div class="col s12">
                 <h2 class="header light-blue-text darken-1">Roles</h2>
-                <div class="card z-depth-3 cyan lighten-1">
+                <div class="card z-depth-3 orange darken-1">
                   <!-- TEN7 section -->
                   <div class="card-content">
-                    <h1>University of MN - IT Department</h1>
-                    <p>Developer/DevOps/QA</p>
+                    <h1>Service Technician</h1>
                   </div>
                   <div class="card-footer">
-                    <p>September 2013 - Present</p>
-                    <p>Maintained and updated production and development servers, as well as Git repositories</p>
-                    <p>Sample content</p>
-                    <a class="card-action" href="http://then7.com">TEN7</a>
+                    <p>March 2013 - June 2013</p>
+                    <p><strong>Description: </strong>I was part of a team working for the College of Biological sciences at the University. We came to the aid of faculty and graduate students working in large research labs, who relied heavily on their data laden computers. Tickets ranged from hardware/software upgrades, setup and configuration of new machines, network troubleshooting, website updates, and my personal favorite, updating Java.</p>
+                    <p><strong>Skills: </strong>Hardware maintenance and installation, team problem solving, responding and working with numerous clients, software/hardware troubleshooting.</p>
+                    <a class="card-action" href="http://www.cbs.umn.edu/">U of MN - CBS</a>
                   </div>
                 </div>
               </div>
@@ -223,24 +224,8 @@
       </div>
     </div>
     <!-- footer -->
-    <div class="section light-blue darken-1">
-      <a name="contact"></a>
-      <div class="container">
-        <div class="row center">
-          <div class="col s12 l6">
-            <a href="#" class="waves-effect waves-dark btn orange darken-1"><span>Email</span><i class="mdi-communication-email"></i></a>
-          </div>
-          <div class="col s12 l6">
-            <a href="#" class="waves-effect waves-dark btn orange darken-1"><span>Connect</span><i class="mdi-social-people-outline"></i></a>
-          </div>
-        </div>
-        <div class="row center">
-          <p class="flow-text no-marg"><h6 class="white-text">Created in 2014 by Coleman Rollins</h6></p>
-        </div>
-      </div>
-    </div>
+    <div id="footer"></div>
     <!--Import jQuery before materialize.js-->
-    <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="js/materialize.min.js"></script>
     <script type="text/javascript" src="js/js.js"></script>
   </body>
