--- a/index.html
+++ b/index.html
@@ -6,17 +6,27 @@
     <link type="text/css" rel="stylesheet" href="stylesheets/animate.css" media="screen,projection"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-        <script>
+    <script>
     $(function(){
-    $("#header").load("header.html");
     $("#footer").load("footer.html");
-
     });
     </script>
     <script src="js/wow.min.js"></script>
   </head>
-  <div id="header"></div>
-<body>
+  <nav class="light-blue darken-1 z-depth-1">
+    <div class="container">
+      <div class="nav-wrapper">
+        <a href="index.html" class="brand-logo white-text"><img class="brand" src="img/c.png"></a>
+        <ul id="nav-mobile" class="right side-nav">
+          <li><a href="work.html">Work</a></li>
+          <li><a href="about.html">About Me</a></li>
+          <li><a href="index.html#contact">Contact</a></li>
+        </ul>
+        <a class="button-collapse" href="#" data-activates="nav-mobile"><i class="mdi-navigation-menu"></i></a>
+      </div>
+    </div>
+  </nav>
+  <body>
     <div class="section">
       <div class="container">
         <div class="row">
@@ -44,15 +54,16 @@
         </div>
       </div>
     </div>
+    <!-- Twitter Row -->
     <div class="section grey darken-4">
       <div class="container">
-        <div class="row center">
+        <div class="row center twitter-row">
           <a href="https://twitter.com/Kole_MANN" target="_blank"><img src="img/twitter.png"></a>
         </div>
       </div>
     </div>
     <!-- footer -->
-        <div id="footer"></div>
+    <div id="footer"></div>
     <!--Import jQuery before materialize.js-->
     <script type="text/javascript" src="js/materialize.min.js"></script>
     <script type="text/javascript" src="js/js.js"></script>
