--- a/footer.html
+++ b/footer.html
@@ -1,16 +1,18 @@
     <div class="section light-blue darken-1">
       <a name="contact"></a>
       <div class="container">
-        <div class="row center">
-          <div class="col s12 l6">
+        <div class="row">
+          <div class="col s12 l6 right">
             <a href="#" class="waves-effect waves-dark btn orange darken-1"><span>Email</span><i class="mdi-communication-email"></i></a>
           </div>
-          <div class="col s12 l6">
-            <a href="#" class="waves-effect waves-dark btn orange darken-1"><span>Connect</span><i class="mdi-social-people-outline"></i></a>
+          <div class="col s12 l6 left">
+            <a href="#" class="waves-effect waves-dark btn orange darken-1 ft-btn"><span>Connect</span><i class="mdi-social-people-outline"></i></a>
           </div>
         </div>
         <div class="row center">
-          <p class="flow-text no-marg"><h6 class="white-text">Created in 2014 by Coleman Rollins</h6></p>
+          <p class="no-marg flow-text white-text foot">Created in 2014 by Coleman Rollins </br>
+          using <a href="http://materializecss.com/" target="_blank" class="m">Materialize</a> open source framework
+          </p>
         </div>
       </div>
     </div>
