Got latest Materialize filez

--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
     </div>
   </nav>
   <div class="col s12">
-    <ul class="tabs z-depth-1">
+    <ul class="tabs z-depth-1" id="tabz">
       <li class="tab col l4"><a href="#tabA">Bike</a></li>
       <li class="tab col l4"><a href="#tabB">Computer</a></li>
       <li class="tab col l4"><a href="#tabC">Israel</a></li>
