Got stuff from old files to fix everything

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <img class="materialboxed me center" width="250" src="img/me.jpg">
         </div>
         <div class="row center">
-          <h4 class="header col s12 center light-blue-text darken-1">Minneapolis Based Web Developer/DevOps</h4>
+          <h4 class="header col s12 center light-blue-text darken-1">Minneapolis Based Web Developer/DevOps Engineer</h4>
         </div>
         <div class="row center">
           <div class="col s12 l4">
@@ -55,10 +55,11 @@
       </div>
     </div>
     <!-- Twitter Row -->
-    <div class="section grey darken-4">
+    <div class="section grey darken-3">
       <div class="container">
         <div class="row center twitter-row">
           <a href="https://twitter.com/Kole_MANN" target="_blank"><img src="img/twitter.png"></a>
+          <a href="https://www.linkedin.com/pub/coleman-rollins/56/845/873" target="_blank"><img class="in" src="img/linkedin.png"></a>
         </div>
       </div>
     </div>
