--- a/work.html
+++ b/work.html
@@ -47,10 +47,9 @@
           <div class="row">
             <h1 class="header light-blue-text darken-1">TEN7 Interactive</h1>
             <div class="row">
-              <h2 class="header light-blue-text darken-1">Roles</h2>
+              <h2 class="header light-blue-text accent-1">Roles</h2>
               <div class="col s12">
-                
-                <div class="card z-depth-3 green lighten-1">
+                <div class="card z-depth-3 green">
                   <div class="card-content">
                     <h1>Developer</h1>
                   </div>
@@ -61,8 +60,7 @@
                     <a class="card-action" href="http://then7.com">Link to TEN7</a>
                   </div>
                 </div>
-              </div>
-              
+              </div>              
             </div>
             <div class="row">
               <div class="col s12 l6">
