--- a/footer.html
+++ b/footer.html
@@ -2,11 +2,8 @@
       <a name="contact"></a>
       <div class="container">
         <div class="row">
-          <div class="col s12 l6 right">
-            <a href="#" class="waves-effect waves-dark btn orange darken-1"><span>Email</span><i class="mdi-communication-email"></i></a>
-          </div>
-          <div class="col s12 l6 left">
-            <a href="#" class="waves-effect waves-dark btn orange darken-1 ft-btn"><span>Connect</span><i class="mdi-social-people-outline"></i></a>
+          <div class="col s12">
+            <a href="mailto:crollins199@gmail.com" class="waves-effect waves-dark btn orange darken-1"><span>Email</span><i class="mdi-communication-email"></i></a>
           </div>
         </div>
         <div class="row center">
