Added some cool pix. Favicon too :)

--- a/work.html
+++ b/work.html
@@ -47,11 +47,13 @@
           <div class="row">
             <h1 class="header light-blue-text darken-1">TEN7 Interactive</h1>
             <div class="row">
-              <h2 class="header light-blue-text accent-1">Roles</h2>
+              
               <div class="col s12">
+                <h2 class="header light-blue-text">Roles</h2>
                 <div class="card z-depth-3 green">
-                  <div class="card-content">
-                    <h1>Developer</h1>
+                  <div class="card-image">
+                    <img class="developer" src="img/computer.jpg">
+                    <span class="card-title">Developer</span>
                   </div>
                   <div class="card-footer">
                     <p>December 2013 - Present</p>
@@ -60,7 +62,7 @@
                     <a class="card-action" href="http://then7.com">Link to TEN7</a>
                   </div>
                 </div>
-              </div>              
+              </div>
             </div>
             <div class="row">
               <div class="col s12 l6">
@@ -116,8 +118,10 @@
               <div class="col s12">
                 <h2 class="header light-blue-text darken-1">Roles</h2>
                 <div class="card z-depth-3 deep-purple">
-                  <div class="card-content">
-                    <h1>Software Quality Assurance Intern</h1>
+                  <div class="card-image">
+                    <img class="sqa" src="img/pearson.jpg">
+                    <span class="card-title">Software Quality</br>
+                     Assurance Intern</span>
                   </div>
                   <div class="card-footer">
                     <p>June 2013 - September 2013</p>
@@ -195,8 +199,9 @@
               <div class="col s12">
                 <h2 class="header light-blue-text darken-1">Physics Department</h2>
                 <div class="card z-depth-3 red">
-                  <div class="card-content">
-                    <h1>BS Physics</h1>
+                  <div class="card-image">
+                    <img class="phys" src="img/phys.jpg">
+                    <span class="card-title">BS Physics</span>
                   </div>
                   <div class="card-footer">
                     <p>Graduated: December 2013</p>
