--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <link rel="icon" href="img/c.png">
     <!--Import materialize.css-->
     <link type="text/css" rel="stylesheet" href="stylesheets/materialize.css" media="screen,projection"/>
     <link type="text/css" rel="stylesheet" href="stylesheets/custom.css" media="screen,projection"/>
