--- a/about.html
+++ b/about.html
@@ -1,11 +1,14 @@
 <html>
   <head>
+    <link rel="icon" href="img/c.png">
     <!--Import materialize.css-->
     <link type="text/css" rel="stylesheet" href="stylesheets/materialize.css" media="screen,projection"/>
     <link type="text/css" rel="stylesheet" href="stylesheets/custom.css" media="screen,projection"/>
     <link type="text/css" rel="stylesheet" href="stylesheets/animate.css" media="screen,projection"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script type="text/javascript" src="js/materialize.min.js"></script>
+    <script type="text/javascript" src="js/js.js"></script>
     <script>
     $(function(){
     $("#footer").load("footer.html");
@@ -29,22 +32,34 @@
       </div>
     </div>
   </nav>
-  <div class="col s12">
-    <ul class="tabs z-depth-1" id="tabz">
-      <li class="tab col l4"><a href="#tabA">Bike</a></li>
-      <li class="tab col l4"><a href="#tabB">Computer</a></li>
-      <li class="tab col l4"><a href="#tabC">Israel</a></li>
-    </ul>
-  </div>
-  <body>
-    <div class="container">
-      <div id="tabA" class="col s12">Test 1</div>
-      <div id="tabB" class="col s12">Test 2</div>
-      <div id="tabC" class="col s12">Test 3</div>
+  <body class="WOW fadeIn">
+    <div class="row container">
+      <h2 class="header">I like to ride my bike</h2>
+      <p class="grey-text darken-3 lighten-3">Parallax is an effect where the background content or image in this case, is moved at a different speed than the foreground content while scrolling.</p>
     </div>
-    <!-- footer -->
-    <div id="footer"></div>
-    <!--Import jQuery before materialize.js-->
-    <script type="text/javascript" src="js/materialize.min.js"></script>
-    <script type="text/javascript" src="js/js.js"></script>
+    <div class="parallax-container" id="masi">
+      <div class="parallax"><img src="img/masi.jpg"></div>
+    </div>
+    <div class="section white">
+      <div class="row container">
+        <h2 class="header">I like golf</h2>
+        <p class="grey-text darken-3 lighten-3">Parallax is an effect where the background content or image in this case, is moved at a different speed than the foreground content while scrolling.</p>
+      </div>
+    </div>
+    <div class="parallax-container" id="masters">
+      <div class="parallax"><img src="img/masters.jpg"></div>
+    </div>
+        <div class="section white">
+      <div class="row container">
+        <h2 class="header">I like golf</h2>
+        <p class="grey-text darken-3 lighten-3">Parallax is an effect where the background content or image in this case, is moved at a different speed than the foreground content while scrolling.</p>
+      </div>
+    </div>
+        <div class="parallax-container" id="lambeau">
+      <div class="parallax"><img src="img/lambeau.jpg"></div>
+    </div>
+  </body>
+  <!-- footer -->
+  <div id="footer"></div>
+  <!--Import jQuery before materialize.js-->
 </html>
