--- a/footer.html
+++ b/footer.html
@@ -3,7 +3,7 @@
       <div class="container">
         <div class="row">
           <div class="col s12">
-            <a href="mailto:crollins199@gmail.com" class="waves-effect waves-dark btn orange darken-1"><span>Email</span><i class="mdi-communication-email"></i></a>
+            <a href="mailto:crollins199@gmail.com" class="waves-effect waves-dark btn orange darken-1"><i class="mdi-communication-email"></i></a>
           </div>
         </div>
         <div class="row center">
