Internets picky about jpg/JPG

--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
       <p class="grey-text darken-3 lighten-3">Parallax is an effect where the background content or image in this case, is moved at a different speed than the foreground content while scrolling.</p>
     </div>
     <div class="parallax-container" id="masi">
-      <div class="parallax"><img src="img/masi.jpg"></div>
+      <div class="parallax"><img src="img/masi.JPG"></div>
     </div>
     <div class="section white">
       <div class="row container">
@@ -47,7 +47,7 @@
       </div>
     </div>
     <div class="parallax-container" id="masters">
-      <div class="parallax"><img src="img/masters.jpg"></div>
+      <div class="parallax"><img src="img/masters.JPG"></div>
     </div>
         <div class="section white">
       <div class="row container">
