Small picky things

--- a/work.html
+++ b/work.html
@@ -69,7 +69,7 @@
             </div>
             <div class="row">
               <div class="col s12 l6">
-                <div class="card z-depth-3 green darken-1">
+                <div class="card z-depth-3 green">
                   <div class="card-content">
                     <h1>DevOps Engineer</h1>
                   </div>
@@ -81,7 +81,7 @@
                 </div>
               </div>
               <div class="col s12 l6">
-                <div class="card z-depth-3 green darken-2">
+                <div class="card z-depth-3 green">
                   <div class="card-content">
                     <h1>Quality Assurance Analyst</h1>
                   </div>
@@ -96,7 +96,7 @@
             <div class="row">
               <div class="col s12">
                 <h2 class="header light-blue-text darken-1">Projects</h2>
-                <div class="card z-depth-3 green darken-3">
+                <div class="card z-depth-3 green">
                   <div class="card-content">
                     <h1>InnerCity Tennis</h1>
                   </div>
@@ -138,7 +138,7 @@
             <div class="row">
               <div class="col s12">
                 <h2 class="header light-blue-text darken-1">Projects</h2>
-                <div class="card z-depth-3 deep-purple darken-1">
+                <div class="card z-depth-3 deep-purple">
                   <div class="card-content">
                     <h1>Visual Report of Automated Tests - Updated In Real Time</h1>
                   </div>
@@ -177,7 +177,7 @@
             <div class="row">
               <div class="col s12">
                 <h2 class="header light-blue-text darken-1">Projects</h2>
-                <div class="card z-depth-3 orange">
+                <div class="card z-depth-3 orange darken-1">
                   <div class="card-content">
                     <h1>Physics Department - Senior Independent Project</h1>
                   </div>
@@ -218,7 +218,7 @@
             <div class="row">
               <div class="col s12">
                 <h2 class="header light-blue-text darken-1">Awards</h2>
-                <div class="card z-depth-3 red darken-1">
+                <div class="card z-depth-3 red">
                   <div class="card-content">
                     <h1>Evans Scholarship Recipient</h1>
                     
