--- a/footer.html
+++ b/footer.html
@@ -1,15 +1,35 @@
-    <div class="section light-blue darken-1">
-      <a name="contact"></a>
-      <div class="container">
-        <div class="row">
-          <div class="col s12">
-            <a href="mailto:crollins199@gmail.com" class="waves-effect waves-dark btn orange darken-1"><i class="mdi-communication-email"></i></a>
-          </div>
-        </div>
-        <div class="row center">
-          <p class="no-marg flow-text white-text foot">Created in 2014 by Coleman Rollins </br>
-          using <a href="http://materializecss.com/" target="_blank" class="m">Materialize</a> open source framework
-          </p>
-        </div>
+<!-- Twitter Row -->
+<div class="section grey darken-3">
+  <div class="container">
+    <div class="row center twitter-row">
+      <a href="https://twitter.com/Kole_MANN" target="_blank"><img src="img/twitter.png"></a>
+      <a href="https://www.linkedin.com/pub/coleman-rollins/56/845/873" target="_blank"><img class="in" src="img/linkedin.png"></a>
+    </div>
+  </div>
+</div>
+<div class="section light-blue darken-1">
+  <a name="contact"></a>
+  <div class="container">
+    <div class="row">
+      <div class="col s12">
+        <a href="mailto:crollins199@gmail.com" class="waves-effect waves-dark btn orange darken-1"><i class="mdi-communication-email"></i></a>
       </div>
     </div>
+    <div class="row center">
+      <p class="no-marg flow-text white-text foot">Created in 2014 by Coleman Rollins </br>
+      using <a href="http://materializecss.com/" target="_blank" class="m">Materialize</a> open source framework
+      </p>
+    </div>
+  </div>
+</div>
+<!-- Google Analytics -->
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-57713704-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
