--- a/about.html
+++ b/about.html
@@ -49,17 +49,25 @@
     <div class="parallax-container" id="masters">
       <div class="parallax"><img src="img/masters.JPG"></div>
     </div>
-        <div class="section white">
+    <div class="section white">
       <div class="row container">
         <h2 class="header">I like golf</h2>
         <p class="grey-text darken-3 lighten-3">Parallax is an effect where the background content or image in this case, is moved at a different speed than the foreground content while scrolling.</p>
       </div>
     </div>
-        <div class="parallax-container" id="lambeau">
+    <div class="parallax-container" id="lambeau">
       <div class="parallax"><img src="img/lambeau.jpg"></div>
     </div>
   </body>
   <!-- footer -->
   <div id="footer"></div>
-  <!--Import jQuery before materialize.js-->
+  <!-- Google Analytics -->
+  <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  ga('create', 'UA-57713704-1', 'auto');
+  ga('send', 'pageview');
+  </script>
 </html>
