--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link type="text/css" rel="stylesheet" href="stylesheets/animate.css" media="screen,projection"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-        <script type="text/javascript" src="js/materialize.min.js"></script>
+    <script type="text/javascript" src="js/materialize.min.js"></script>
     <script type="text/javascript" src="js/js.js"></script>
     <script>
     $(function(){
@@ -59,6 +59,14 @@
     </div>
     <!-- footer -->
     <div id="footer"></div>
-    <!--Import jQuery before materialize.js-->
+    <!-- Google Analytics -->
+    <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    ga('create', 'UA-57713704-1', 'auto');
+    ga('send', 'pageview');
+    </script>
   </body>
 </html>
