Added hackday projects to TEN7 page

--- a/work.html
+++ b/work.html
@@ -62,7 +62,7 @@
                     <p>December 2013 - Present</p>
                     <p><strong>Description: </strong>I've worked on a wide variety of projects at TEN7. From small support roles on existing sites, to starting a site from scratch as the lead developer. I've been fortunate enough to experience working in teams, as well as individually, while using new technologies every day.</p>
                     <p><strong>Skills: </strong>Drupal 6/7, git, drush, HTML5, CSS (including LESS & SCSS), JavaScript (jQuery), command line tools (node, bower, compass), Multiple Web Frameworks, PhotoShop</p>
-                    <a class="card-action" href="http://then7.com">Link to TEN7</a>
+                    <a class="card-action" href="http://then7.com" target="_blank">Link to TEN7</a>
                   </div>
                 </div>
               </div>
@@ -97,14 +97,45 @@
               <div class="col s12">
                 <h2 class="header light-blue-text darken-1">Projects</h2>
                 <div class="card z-depth-3 green">
-                  <div class="card-content">
-                    <h1>InnerCity Tennis</h1>
+                  <div class="card-image">
+                    <img class="developer" src="img/ict.jpg">
+                    <span class="card-title">InnerCity Tennis</span>
                   </div>
                   <div class="card-footer">
                     <p>June 2014 - December 2014</p>
                     <p>This project was a complete site redesign from square one, on which I was the sole developer. Being able to own every development step along the way was an incredible learning experience, and has vastly improved my own skills.</p>
                     <p><strong>Skills: </strong>Completing and participating in a long-term project from start to finish, communicating with clients in regard to new requests and site functionality, maintaining a level-head throughout many frustrating stages of the process.</p>
-                    <a class="card-action" href="http://innercitytennis.org">InnerCityTennis.org</a>
+                    <a class="card-action" href="http://innercitytennis.org" target="_blank">InnerCityTennis.org</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col s12">
+                <h2 class="header light-blue-text darken-1">Hackday Projects</h2>
+                <div class="card z-depth-3 green">
+                  <div class="card-image">
+                    <img class="memeify" src="img/doi.jpg">
+                    <span class="card-title">DevOps-Ipsum</span>
+                  </div>
+                  <div class="card-footer">
+                    <p>October 2014</p>
+                    <p>Once a month at TEN7, we would spend a whole day as a company working on personal projects. This particular instance I was compelled to put together a collection of the vast amount of terms associated with the DevOps world. Need some filler text for your site? Look no further! This site was put together in one day, using Twitter Bootstrap and jQuery.</p>
+                    <a class="card-action" href="http://devops-ipsum.github.io" target="_blank">DevOps-Ipsum</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col s12">
+                <div class="card z-depth-3 green">
+                  <div class="card-image">
+                    <img class="memeify" src="img/memeify.png">
+                    <span class="card-title">Memeify</span>
+                  </div>
+                  <div class="card-footer">
+                    <p>September 2014</p>
+                    <p>This hackday I decided to try my hand at android development. Using Eclipse, Java, and the Android SDK, I was able to put together a fully functioning (albeit terrible) app. </p>
                   </div>
                 </div>
               </div>
@@ -130,7 +161,7 @@
                     <p>June 2013 - September 2013</p>
                     <p><strong>Description: </strong>The computer-based testing software produced by Pearson VUE is vastly in-depth, and thus requires in-depth testing. I helped to write and perfom numerous automated test scenarios that were performed on the functionality of Pearson VUE software on a daily basis.</p>
                     <p><strong>Skills: </strong>Twist automation software, Perforce version control, introduction to a very large code base, writing custom SQL queries, various database visualization software, realizing I hate working in a cubicle</p>
-                    <a class="card-action" href="http://pearsonvue.com">Pearson VUE</a>
+                    <a class="card-action" href="http://pearsonvue.com" target="_blank">Pearson VUE</a>
                   </div>
                 </div>
               </div>
@@ -169,7 +200,7 @@
                     <p>March 2013 - June 2013</p>
                     <p><strong>Description: </strong>I was part of a team working for the College of Biological sciences at the University. We came to the aid of faculty and graduate students working in large research labs, who relied heavily on their data laden computers. Tickets ranged from hardware/software upgrades, setup and configuration of new machines, network troubleshooting, website updates, and my personal favorite, updating Java.</p>
                     <p><strong>Skills: </strong>Hardware maintenance and installation, team problem solving, responding and working with numerous clients, software/hardware troubleshooting.</p>
-                    <a class="card-action" href="http://www.cbs.umn.edu/">U of MN - CBS</a>
+                    <a class="card-action" href="http://www.cbs.umn.edu/" target="_blank">U of MN - CBS</a>
                   </div>
                 </div>
               </div>
@@ -210,7 +241,7 @@
                     <p>Graduated: December 2013</p>
                     
                     <p><strong>Skills: </strong>Calculus, problem solving, quantum mechanics, Shrodingers Equation, never wanting to solve the Shrodinger equation again</p>
-                    <a class="card-action" href="http://umn.edu">UMN</a>
+                    <a class="card-action" href="http://umn.edu" target="_blank">UMN</a>
                   </div>
                 </div>
               </div>
@@ -227,7 +258,7 @@
                     <p>September 2009 - June 2013</p>
                     <p><strong>Description: </strong>The Evans Scholarship Program is a nation-wide foundation lead by the Western Golf Association. The program awards four-year, full tuition scholarships to caddies at 14 different schools in the US. I was incredibly fortunate to be an Evans Scholar, and wouldn't be where I am now without the scholarship.</p>
                     <p><strong>Skills: </strong>Group living, community service, beer drinking.</p>
-                    <a class="card-action" href="http://www.wgaesf.org/">Western Golf Association</a>
+                    <a class="card-action" href="http://www.wgaesf.org/" target="_blank">Western Golf Association</a>
                   </div>
                 </div>
               </div>
