--- a/footer.html
+++ b/footer.html
@@ -2,7 +2,7 @@
 <div class="section grey darken-3">
   <div class="container">
     <div class="row center twitter-row">
-      <a href="https://twitter.com/Kole_MANN" target="_blank"><img src="img/twitter.png"></a>
+      <a href="https://twitter.com/Kole_MANN" target="_blank"><img id="twitter" src="img/twitter.png"></a>
       <a href="https://www.linkedin.com/pub/coleman-rollins/56/845/873" target="_blank"><img class="in" src="img/linkedin.png"></a>
     </div>
   </div>
@@ -22,14 +22,3 @@
     </div>
   </div>
 </div>
-<!-- Google Analytics -->
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-57713704-1', 'auto');
-  ga('send', 'pageview');
-
-</script>
