Added a bunch of pics to about page

--- a/index.html
+++ b/index.html
@@ -33,12 +33,16 @@
     <div class="section">
       <div class="container">
         <div class="row">
+          <div class="col s12">
           <h1 class="header light-blue-text darken-1">
           Coleman Rollins
           </h1>
+          </div>
         </div>
         <div class="row center">
-          <img class="materialboxed me center" width="250" src="img/me.jpg">
+          <div class="col s12">
+          <img class="me center" width="250" src="img/me.jpg">
+          </div>
         </div>
         <div class="row center">
           <h4 class="header col s12 center light-blue-text darken-1">Minneapolis Based Web Developer/DevOps Engineer</h4>
