--- a/about.html
+++ b/about.html
@@ -34,29 +34,47 @@
   </nav>
   <body class="WOW fadeIn">
     <div class="row container">
-      <h2 class="header">I like to ride my bike</h2>
-      <p class="grey-text darken-3 lighten-3">Parallax is an effect where the background content or image in this case, is moved at a different speed than the foreground content while scrolling.</p>
+      <h2 class="header light-blue-text darken-1">A Little About Me</h2>
+      <p class="grey-text darken-3 lighten-3"></p>
     </div>
     <div class="parallax-container" id="masi">
-      <div class="parallax"><img src="img/masi.JPG"></div>
+      <div class="parallax"><img src="img/mpls.jpg"></div>
     </div>
     <div class="section white">
       <div class="row container">
-        <h2 class="header">I like golf</h2>
-        <p class="grey-text darken-3 lighten-3">Parallax is an effect where the background content or image in this case, is moved at a different speed than the foreground content while scrolling.</p>
+        <div class="col s12 m4">
+          <img class="materialboxed center wide" src="img/kahda.jpg">
+        </div>
+        <div class="col s12 m4">
+          <img class="materialboxed center wide" src="img/bikes.jpg">
+        </div>
+        <div class="col s12 m4">
+          <img class="materialboxed center wide" src="img/bogarts.jpg">
+        </div>
       </div>
-    </div>
-    <div class="parallax-container" id="masters">
-      <div class="parallax"><img src="img/masters.JPG"></div>
-    </div>
-    <div class="section white">
       <div class="row container">
-        <h2 class="header">I like golf</h2>
-        <p class="grey-text darken-3 lighten-3">Parallax is an effect where the background content or image in this case, is moved at a different speed than the foreground content while scrolling.</p>
+        <div class="col s12 m4">
+          <img class="materialboxed center wide" src="img/feetup.jpg">
+          
+        </div>
+        <div class="col s12 m4">
+          <img class="materialboxed center wide" src="img/ivan.jpg">
+        </div>
+        <div class="col s12 m4">
+          <img class="materialboxed center wide" src="img/keyboards.jpg">
+        </div>
       </div>
-    </div>
-    <div class="parallax-container" id="lambeau">
-      <div class="parallax"><img src="img/lambeau.jpg"></div>
+      <div class="row container">
+        <div class="col s12 m4">
+          <img class="materialboxed center wide" src="img/lambeau.jpg">
+        </div>
+        <div class="col s12 m4">
+          <img class="materialboxed center wide" src="img/meta.jpg">
+        </div>
+        <div class="col s12 m4">
+          <img class="materialboxed center wide" src="img/prokart.jpg">
+        </div>
+      </div>
     </div>
   </body>
   <!-- footer -->
