--- a/work.html
+++ b/work.html
@@ -95,7 +95,7 @@
             </div>
             <div class="row">
               <div class="col s12">
-                <h2 class="header light-blue-text darken-1">Projects</h2>
+                <h2 class="header light-blue-text darken-1">Major Projects</h2>
                 <div class="card z-depth-3 green">
                   <div class="card-image">
                     <img class="developer" src="img/ict.jpg">
@@ -135,7 +135,7 @@
                   </div>
                   <div class="card-footer">
                     <p>September 2014</p>
-                    <p>This hackday I decided to try my hand at android development. Using Eclipse, Java, and the Android SDK, I was able to put together a fully functioning (albeit terrible) app. </p>
+                    <p>This hackday I decided to try my hand at android development. Using Eclipse, Java, and the Android SDK, I was able to put together a fully functioning (albeit terrible) meme generator app. </p>
                   </div>
                 </div>
               </div>
