--- a/about.html
+++ b/about.html
@@ -43,36 +43,36 @@
     <div class="section white">
       <div class="row container">
         <div class="col s12 m4">
-          <img class="materialboxed center wide" src="img/kahda.jpg">
+          <img class="  center wide" src="img/kahda.jpg">
         </div>
         <div class="col s12 m4">
-          <img class="materialboxed center wide" src="img/bikes.jpg">
+          <img class="  center wide" src="img/bikes.jpg">
         </div>
         <div class="col s12 m4">
-          <img class="materialboxed center wide" src="img/bogarts.jpg">
+          <img class="  center wide" src="img/bogarts.jpg">
         </div>
       </div>
       <div class="row container">
         <div class="col s12 m4">
-          <img class="materialboxed center wide" src="img/feetup.jpg">
+          <img class="  center wide" src="img/feetup.jpg">
           
         </div>
         <div class="col s12 m4">
-          <img class="materialboxed center wide" src="img/ivan.jpg">
+          <img class="  center wide" src="img/ivan.jpg">
         </div>
         <div class="col s12 m4">
-          <img class="materialboxed center wide" src="img/keyboards.jpg">
+          <img class="  center wide" src="img/keyboards.jpg">
         </div>
       </div>
       <div class="row container">
         <div class="col s12 m4">
-          <img class="materialboxed center wide" src="img/lambeau.jpg">
+          <img class="  center wide" src="img/lambeau.jpg">
         </div>
         <div class="col s12 m4">
-          <img class="materialboxed center wide" src="img/meta.jpg">
+          <img class="  center wide" src="img/meta.jpg">
         </div>
         <div class="col s12 m4">
-          <img class="materialboxed center wide" src="img/prokart.jpg">
+          <img class="  center wide" src="img/prokart.jpg">
         </div>
       </div>
     </div>
