Took away ict pic since not done

--- a/work.html
+++ b/work.html
@@ -97,15 +97,15 @@
               <div class="col s12">
                 <h2 class="header light-blue-text darken-1">Major Projects</h2>
                 <div class="card z-depth-3 green">
-                  <div class="card-image">
-                    <img class="developer" src="img/ict.jpg">
+                  <div class="card-content">
+                    <img class="developer" src="">
                     <span class="card-title">InnerCity Tennis</span>
                   </div>
                   <div class="card-footer">
                     <p>June 2014 - December 2014</p>
                     <p>This project was a complete site redesign from square one, on which I was the sole developer. Being able to own every development step along the way was an incredible learning experience, and has vastly improved my own skills.</p>
                     <p><strong>Skills: </strong>Completing and participating in a long-term project from start to finish, communicating with clients in regard to new requests and site functionality, maintaining a level-head throughout many frustrating stages of the process.</p>
-                    <a class="card-action" href="http://innercitytennis.org" target="_blank">InnerCityTennis.org</a>
+                    <a class="card-action" href="" target="_blank">Link Coming Soon!</a>
                   </div>
                 </div>
               </div>
