Bunch of tweaks including all white footer icons

--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
     new WOW().init();
     </script>
   </head>
-  <nav class="light-blue darken-1 z-depth-1">
+  <nav class="light-blue z-depth-1">
     <div class="container">
       <div class="nav-wrapper">
         <a href="index.html" class="brand-logo white-text"><img class="brand" src="img/c.png"></a>
