--- a/footer.html
+++ b/footer.html
@@ -1,18 +1,17 @@
 <!-- Twitter Row -->
-<div class="section grey darken-3">
+<div class="section my-grey">
   <div class="container">
     <div class="row center twitter-row">
       <a href="https://twitter.com/Kole_MANN" target="_blank"><img id="twitter" src="img/twitter.png"></a>
       <a href="https://www.linkedin.com/pub/coleman-rollins/56/845/873" target="_blank"><img class="in" src="img/linkedin.png"></a>
+       <a href="mailto:crollins199@gmail.com"><i class="white-text medium mdi-communication-email"></i></a>
     </div>
   </div>
-</div>
-<div class="section light-blue darken-1">
   <a name="contact"></a>
   <div class="container">
     <div class="row">
       <div class="col s12">
-        <a href="mailto:crollins199@gmail.com" class="waves-effect waves-dark btn orange darken-1"><i class="mdi-communication-email"></i></a>
+       
       </div>
     </div>
     <div class="row center">
