--- a/work.html
+++ b/work.html
@@ -19,7 +19,7 @@
     new WOW().init();
     </script>
   </head>
-  <nav class="light-blue darken-1 z-depth-1">
+  <nav class="light-blue z-depth-1">
     <div class="container">
       <div class="nav-wrapper">
         <a href="index.html" class="brand-logo white-text"><img class="brand" src="img/c.png"></a>
@@ -48,9 +48,8 @@
       <div id="tab1" class="col s12">
         <div class="section WOW fadeIn" id="sec1">
           <div class="row">
-            <h1 class="header light-blue-text darken-1">TEN7 Interactive</h1>
-            <div class="row">
-              
+            <h1 class="header light-blue-text">TEN7 Interactive</h1>
+            <div class="row">              
               <div class="col s12">
                 <h2 class="header light-blue-text">Roles</h2>
                 <div class="card z-depth-3 green">
