--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </script>
     <script src="js/wow.min.js"></script>
   </head>
-  <nav class="light-blue darken-1 z-depth-1">
+  <nav class="light-blue z-depth-1">
     <div class="container">
       <div class="nav-wrapper">
         <a href="index.html" class="brand-logo white-text"><img class="brand" src="img/c.png"></a>
@@ -34,7 +34,7 @@
       <div class="container">
         <div class="row">
           <div class="col s12">
-          <h1 class="header light-blue-text darken-1">
+          <h1 class="header light-blue-text">
           Coleman Rollins
           </h1>
           </div>
@@ -49,13 +49,13 @@
         </div>
         <div class="row center">
           <div class="col s12 l4">
-            <a href="work.html" class="waves-effect waves-light btn light-blue darken-1">My Work</a>
+            <a href="work.html" class="waves-effect waves-light btn light-blue">My Work</a>
           </div>
           <div class="col s12 l4">
-            <a href="about.html" class="waves-effect waves-light btn light-blue darken-1">About Me</a>
+            <a href="about.html" class="waves-effect waves-light btn light-blue">About Me</a>
           </div>
           <div class="col s12 l4">
-            <a href="#contact" class="waves-effect waves-light btn light-blue darken-1">Get In touch</a>
+            <a href="#contact" class="waves-effect waves-light btn light-blue">Get In touch</a>
           </div>
           
         </div>
