--- a/footer.html
+++ b/footer.html
@@ -1,5 +1,4 @@
-<!-- Twitter Row -->
-<div class="section my-grey">
+<div class="section grey darken-1">
   <div class="container">
     <div class="row center twitter-row">
       <a href="https://twitter.com/Kole_MANN" target="_blank"><img id="twitter" src="img/twitter.png"></a>
