--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <ul id="nav-mobile" class="right side-nav">
           <li><a href="work.html">Work</a></li>
           <li><a href="about.html">About Me</a></li>
-          <li><a href="index.html#contact">Contact</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
         <a class="button-collapse" href="#" data-activates="nav-mobile"><i class="mdi-navigation-menu"></i></a>
       </div>
@@ -55,9 +55,8 @@
             <a href="about.html" class="waves-effect waves-light btn light-blue">About Me</a>
           </div>
           <div class="col s12 l4">
-            <a href="#contact" class="waves-effect waves-light btn light-blue">Get In touch</a>
+            <a href="contact.html" class="waves-effect waves-light btn light-blue">Contact</a>
           </div>
-          
         </div>
       </div>
     </div>
